Update to include capstone project

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
           </div>
           <div class="item web col-6 col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4">
-              <!-- Add link in when able to get working example -->
+              <!-- Add link in when live -->
               <!-- <a href="" target="_blank" rel="noopener noreferrer"> -->
                 <img class="img-fluid" src="images/screenshot_winery.png">
                 <h4 class="text-center pt-3">Winery Reviews</h4>
@@ -167,14 +167,13 @@
   
             </div>
             <div class="item web col-6 col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4">
-                <!-- Add link in when complete -->
+                <!-- Add link in when live -->
                 <!-- <a href="/" target="_blank" rel="noopener noreferrer"> -->
-                  <img class="img-fluid" src="images/fillershot.png">
-                  <h4 class="text-center pt-3">Capstone Project</h4>
+                  <img class="img-fluid" src="images/screenshot_isurvived.png">
+                  <h4 class="text-center pt-3">iSurvived</h4>
                 <!-- </a> -->
                   <blockquote>
-                    <p class="mb-0">A really interesting project built by me, so I have a lot of ownership in 
-                      this project.
+                    <p class="mb-0">App designed to educate heart attack survivors about medications.
                     </p>
                     <!-- Update link to github when in place -->
                     <footer class="blockquote-footer text-center"><a href="https://github.com/maryella/" target="_blank" rel="noopener noreferrer">See on Github</a></footer>
@@ -201,7 +200,7 @@
                 <a href="https://github.com/maryella" target="_blank" rel="noopener noreferrer"><i class="fi-social-github"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="./files/resume.pdf" target="_blank" rel="noopener noreferrer"><i class="fi-page-pdf"></i></a>
+                <a href="./files/resumeATS.pdf" target="_blank" rel="noopener noreferrer"><i class="fi-page-pdf"></i></a>
               </li>
               <li class="list-inline-item">
                 <a href="mailto: hillmaryella@gmail.com"><i class="fi-mail"></i></a>
