Added link to github repo

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <p class="mb-0">App designed to educate heart attack survivors about medications.
                 </p>
                 <!-- Update link to github when in place -->
-                <footer class="blockquote-footer text-center"><a href="https://github.com/maryella/" target="_blank" rel="noopener noreferrer">See on Github</a></footer>
+                <footer class="blockquote-footer text-center"><a href="https://github.com/maryella/isurvived" target="_blank" rel="noopener noreferrer">See on Github</a></footer>
               </blockquote>
 
           </div>
