--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <a href="https://github.com/maryella" target="_blank" rel="noopener noreferrer"><i class="fi-social-github"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="./files/resumeATS.pdf" target="_blank" rel="noopener noreferrer"><i class="fi-page-pdf"></i></a>
+                <a href="./files/maryellahill.pdf" target="_blank" rel="noopener noreferrer"><i class="fi-page-pdf"></i></a>
               </li>
               <li class="list-inline-item">
                 <a href="mailto: hillmaryella@gmail.com"><i class="fi-mail"></i></a>
