--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
           </div>
           <div class="item web col-6 col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4">
-              <a href="ec2-13-59-68-130.us-east-2.compute.amazonaws.com" target="_blank" rel="noopener noreferrer">
+              <a href="http://ec2-13-59-68-130.us-east-2.compute.amazonaws.com" target="_blank" rel="noopener noreferrer">
                 <img class="img-fluid" src="images/screenshot_winery.png">
                 <h4 class="text-center pt-3">Winery Reviews</h4>
               <!-- </a> -->
