Example seems to be working again

--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
                     <li class="list-inline-item">
                     <a href="https://github.com/maryella/wineryreview" target="_blank" rel="noopener noreferrer">See Code</a>
                       </li>
-                      <!-- <li class="list-inline-item"><a>·</a></li>
+                      <li class="list-inline-item"><a>·</a></li>
                       <li class="list-inline-item">
                         <a href="http://ec2-13-59-68-130.us-east-2.compute.amazonaws.com" target="_blank" rel="noopener noreferrer">See Demo</a>
-                      </li> -->
+                      </li>
                       </ul>
                     </div>
                   </blockquote>
