--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                       </li>
                       <li class="list-inline-item"><a>·</a></li>
                       <li class="list-inline-item">
-                        <a href="ec2-18-220-142-28.us-east-2.compute.amazonaws.com" target="_blank" rel="noopener noreferrer">See Demo</a>
+                        <a href="http://ec2-18-220-142-28.us-east-2.compute.amazonaws.com/" target="_blank" rel="noopener noreferrer">See Demo</a>
                       </li>
                       </ul>
                     </div>
